syntax = "proto3";

package com.farhankaz.javasight.model;

message CreateProject {
  string project_name = 1;
  string project_location = 2;
}

message Project {
  string project_name = 1;
  string project_location = 2;
  string created_at = 3;
}

message ProjectCreatedEvent {
  string project_id = 1;
  string name = 2;
  string location = 3;
}

message ImportMavenProject {
  string project_id = 1;
  string project_location = 2;
}

message ImportModule {
  string project_id = 1;
  string name = 2;
  string location = 3;
}

message ImportFile {
  string project_id = 1;
  string module_id = 2;
  string file_path = 3;
}

message ImportJavaFile {
  string project_id = 1;
  string module_id = 2;
  string file_path = 3;
  string package_id = 4;
}

message AnalyzeFile {
  string file_id = 1;
  string module_id = 2;
  string project_id = 3;
  string file_path = 4;
  bool detailed = 5;
}

message ScanDirectory {
  string module_id = 1;
  string project_id = 2;
  string path = 3;
  optional string parent_package_id = 4; 
}

message SchedulePackageAnalysis {
  string package_name = 1;
  string project_id = 2;
  string scheduled_at = 3;
}

message AnalyzePackageEvent {
  string package_id = 1;
  string package_name = 2;
  string timestamp = 3;
}
